--- a/scss/_tipos-alimentacion.scss
+++ b/scss/_tipos-alimentacion.scss
@@ -23,7 +23,7 @@
     justify-content: space-around;
 }
 .contenedor-info{
-    background-color: rgb(121, 0, 0);
+    background-color: $color-secundario;
     width: 600px;
     margin: 20px;
     border: solid black 1px;
