--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,6 +6,11 @@
     justify-content: flex-start;
     flex-direction: column-reverse;
     background-color: #bd0606;
+    @media(max-width: 768px){
+            .footer{
+            align-items: flex-end;
+            }
+    }
 }
 .copyright{
     font-size: 12px;
@@ -16,4 +21,10 @@
     position: absolute;
     width: 150px;
     height: 150px; 
+    @media(max-width: 768px){
+            .logo-de-abajo {
+            width: 130px;
+            height: 130px; 
+            }
+    }
 }
