--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -5,10 +5,35 @@
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 20px;
+    @media(max-width: 1200px) {
+        .titulo-inicio{
+            font-size: 56px;
+        }
+    }
+    @media(max-width: 1024px){
+        .titulo-inicio{
+            font-size: 52px;
+        }  
+    }
+    @media(max-width: 992px){
+        .titulo-inicio{
+            font-size: 48px;
+        }
+    }
+    @media(max-width: 768px){
+        .titulo-inicio{
+            font-size: 38px;
+        }
+    }
 }
 .inicio{
     display: flex;
     justify-content: space-around;
+    @media(max-width: 768px){
+        .inicio{
+            flex-wrap: wrap;
+        }
+    }
 }
 .videoInformativo{
     margin: 20px;
@@ -17,6 +42,30 @@
 .video-videoInformativo{
     width: 500px;
     height: 310px;
+    @media(max-width: 1200px) {
+        .video-videInformativo{
+            width: 440px; 
+            height: 270px;
+        }
+    }
+    @media(max-width: 1024px){
+        .video-videInformativo{
+            width: 400px; 
+            height: 240px;
+        }
+    }
+    @media(max-width: 992px){
+        .video-videInformativo{
+            width: 370px; 
+            height: 220px;
+        }
+    }
+    @media(max-width: 768px){
+        .video-videInformativo{
+            width: 320px; 
+            height: 190px;
+        }
+    }
 }
 .videoDescription{
     display: block;
@@ -25,11 +74,51 @@
     font-family: Changa;
     padding: 10px;
     margin: 5px;
+    @media(max-width: 1200px) {
+        .titulo-videoInformativo{
+            font-size: 17px;
+        }
+    }
+    @media(max-width: 1024px){
+        .titulo-videoInformativo{
+            font-size: 16px;
+        }
+    }
+    @media(max-width: 992px){
+        .titulo-videoInformativo{
+            font-size: 15px;
+        }
+    }
+    @media(max-width: 768px){
+        .titulo-videoInformativo{
+            font-size: 14px;
+        }
+    }
 }
 .description-videoInformatico{
     font-family: Changa;
     padding: 10px;
     margin: 5px;
+    @media(max-width: 1200px) {
+        .description-videoInformatico{
+            font-size: 15px;
+        }
+    }
+    @media(max-width: 1024px){
+        .description-videoInformatico{
+            font-size: 14px;
+        }
+    }
+    @media(max-width: 992px){
+        .description-videoInformatico{
+            font-size: 13px;
+        }
+    }
+    @media(max-width: 768px){
+        .description-videoInformatico{
+            font-size: 12px;
+        }
+    }
 }
 .miInformacion{
     width: 240%;
@@ -44,11 +133,51 @@
     font-family: Changa;
     text-align: center;
     font-size: 24px;
+    @media(max-width: 1200px) {
+        .titulo-miInformacion{
+            font-size: 22px;
+        }
+    }
+    @media(max-width: 1024px){
+        .titulo-miInformacion{
+            font-size: 20.5px;
+        }
+    }
+    @media(max-width: 992px){
+        .titulo-miInformacion{
+            font-size: 19px;
+        }
+    }
+    @media(max-width: 768px){
+        .titulo-miInformacion{
+            font-size: 18px;
+        }
+    }
 }
 .mi-Informacion{
     font-size: 13.5px;
     font-family: Changa;
     text-align: center;
+    @media(max-width: 1200px) {
+        .mi-Informacion{
+            font-size: 12px;
+        }
+    }
+    @media(max-width: 1024px){
+        .mi-Informacion{
+            font-size: 11px;
+        }
+    }
+    @media(max-width: 992px){
+        .mi-Informacion{
+            font-size: 10px;
+        }
+    }
+    @media(max-width: 768px){
+        .mi-Informacion{
+            font-size: 9px;
+        }
+    }
 }
 .grafico-inicio-img{
     display: flex;
