--- a/scss/_mas-informacion.scss
+++ b/scss/_mas-informacion.scss
@@ -5,6 +5,31 @@
     font-size: 60px;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    @media(max-width: 1200px) {
+            .titulo-mas-informacion{
+            font-size: 56px;
+            }
+    }
+    @media(max-width: 1024px){
+            .titulo-mas-informacion{
+            font-size: 52px;
+            }
+    }
+    @media(max-width: 992px){
+            .titulo-mas-informacion{
+            font-size: 48px;
+            }
+    }
+    @media(max-width: 768px){
+            .titulo-mas-informacion{
+            font-size: 38px;
+            }
+    }
+    @media(max-width: 480px){
+            .titulo-mas-informacion{
+            font-size: 32px;
+            }
+    }
 }
 .masInformacion{
     display: flex;
@@ -15,6 +40,36 @@
     width: 600px;
     height: 400px;
     object-fit: cover;
+    @media(max-width: 1200px) {
+            .img-mas-informacion{
+            width: 500px;
+            height: 350px;
+            }
+    }
+    @media(max-width: 1024px){
+            .img-mas-informacion{
+            width: 450px;
+            height: 300px;
+            }
+    }
+    @media(max-width: 992px){
+            .img-mas-informacion{
+            width: 400px;
+            height: 250px;
+            }
+    }
+    @media(max-width: 768px){
+            .img-mas-informacion{
+            width: 400px;
+            height: 250px;
+            }
+    }
+    @media(max-width: 480px){
+            .img-mas-informacion{
+            width: 250px;
+            height: 200px;
+            }
+    }
 }
 .informacion-fit{
     border: 1px;
@@ -22,6 +77,31 @@
     border-radius: 10px;
     font-size: 20px;
     font-family: Changa;
+    @media(max-width: 1200px) {
+            .informacion-fit{
+            font-size: 18px;
+            }
+    }
+    @media(max-width: 1024px){
+            .informacion-fit{
+            font-size: 16px;
+            }
+    }
+    @media(max-width: 992px){
+            .informacion-fit{
+            font-size: 14px;
+            }
+    }
+    @media(max-width: 768px){
+            .informacion-fit{
+            font-size: 10px;
+            }
+    }
+    @media(max-width: 480px){
+            .informacion-fit{
+            font-size: 8px;
+            }
+    }
 }
 .metodos-cambio{
     display: flex;
@@ -34,11 +114,70 @@
 .video-cambio{
     width: 750px;
     height: 430px;
+    @media(max-width: 1200px) {
+            .video-cambio{
+            width: 520px;
+            height: 280px;
+            }
+    }
+    @media(max-width: 1024px){
+            .video-cambio{
+            width: 460px;
+            height: 240px;
+            }
+    }
+    @media(max-width: 992px){
+            .video-cambio{
+            width: 420px;
+            height: 200px;
+            }
+    }
+    @media(max-width: 768px){
+            .video-cambio{
+            width: 360px;
+            }
+    }
+    @media(max-width: 480px){
+            .video-cambio{
+            width: 250px;
+            height: 160px;
+            }
+    }
 }
 .img-flecha{
     width: 300px;
     height: 200px;
     object-fit: cover;
+    @media(max-width: 1200px) {
+            .img-flecha{
+            width: 250px;
+            height: 180px;
+            }
+    }
+    @media(max-width: 1024px){
+            .img-flecha{
+            width: 200px;
+            height: 160px;
+            }
+    }
+    @media(max-width: 992px){
+            .img-flecha{
+            width: 150px;
+            height: 120px;
+            }
+    }
+    @media(max-width: 768px){
+            .img-flecha{
+            width: 120px;
+            height: 100px;
+            }
+    }
+    @media(max-width: 480px){
+            .img-flecha{
+            width: 80px;
+            height: 60px;
+            }
+    }
 }
 .metodos{
     border: 1px;
@@ -50,10 +189,60 @@
 .titulo-metodos{
     font-size: 18px;
     font-family: Changa;
+    @media(max-width: 1200px) {
+            .titulo-metodos{
+            font-size: 17px;
+            }
+    }
+    @media(max-width: 1024px){
+            .titulo-metodos{
+            font-size: 16px;
+            }
+    }
+    @media(max-width: 992px){
+            .titulo-metodos{
+            font-size: 15px;
+            }
+    }
+    @media(max-width: 768px){
+            .titulo-metodos{
+            font-size: 12px;
+            }
+    }
+    @media(max-width: 480px){
+            .titulo-metodos{
+            font-size: 10px;
+            }
+    }
 }
 .descripcion-metodos{
     font-size: 12px;
     font-family: Changa;
+    @media(max-width: 1200px){
+            .descripcion-metodos{
+            font-size: 11px;
+            }
+    }
+    @media(max-width: 1024px){
+            .descripcion-metodos{
+            font-size: 10px;
+            }
+    }
+    @media(max-width: 992px){
+            .descripcion-metodos{
+            font-size: 9.5px;
+            }
+    }
+    @media(max-width: 768px){
+            .descripcion-metodos{
+            font-size: 9px;
+            }
+    }
+    @media(max-width: 480px){
+            .descripcion-metodos{
+            font-size: 8px;
+            }
+    }
 }
 .tipos-metodos{ 
     display: flex;
@@ -72,8 +261,49 @@
 .titulo-entrenamientos{
     font-family: Changa;
     color: white;
+    @media(max-width: 1200px){
+            .titulo-entrenamientos{
+            font-size: 16px;
+            }
+    }
+    @media(max-width: 1024px){
+            .titulo-entrenamientos{
+            font-size: 15px;
+            }
+    }
+    @media(max-width: 992px){
+            .titulo-entrenamientos{
+            font-size: 14px;
+            }
+    }
+    @media(max-width: 768px){
+            .titulo-entrenamientos{
+            font-size: 12px;
+            }
+    }
 }
 .descripcion-entrenamientos{
     font-family: Changa;
     color: white;
+    @media(max-width: 1200px){
+            .descripcion-entrenamientos{
+            font-size: 14px;
+            }
+    }
+    @media(max-width: 1024px){
+            .descripcion-entrenamientos{
+            font-size: 13px;
+            }
+    }
+    @media(max-width: 992px){
+            .descripcion-entrenamientos{
+            font-size: 12px;
+            }
+    }
+    @media(max-width: 768px){
+            .descripcion-entrenamientos{
+            font-size: 11px;
+            }
+    }
+    
 }
