--- a/scss/_navegador-contactos.scss
+++ b/scss/_navegador-contactos.scss
@@ -3,7 +3,7 @@
     font-size: 12px;
     list-style: none;
     text-align: left;
-    background-color: #bd0606;
+    background-color: $color-primario;
 }
 .red-ig a{
     font-family: Changa;
