--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -13,13 +13,57 @@
 .navegador-img {
     text-align: left;
     width: 100px;
-    background-color: #bd0606;
+    background-color: $color-primario;
     height: 100px; 
+    @media(max-width: 1200px) {
+        .navegador-img{
+            width: 80px;
+            height: 80px;
+            }
+    }
+    @media(max-width: 1024px){
+        .navegador-img{
+            width: 70px;
+            height: 70px;
+            }
+    }
+    @media(max-width: 992px){
+        .navegador-img{
+            width: 60px;
+            height: 60px;
+            }
+    }
+    @media(max-width: 768px){
+        .navegador-img{
+            width: 50px;
+            height: 50px;
+        }
+    }
 }
 .other-pages {
     list-style: none;
     display: flex;
     gap: 20px;
+    @media(max-width: 1200px) {
+        .other-pagesPage a{
+            font-size: 14px;
+            }
+    }
+    @media(max-width: 1024px){
+        .other-pagesPage a{
+            font-size: 12px;
+            }
+    }
+    @media(max-width: 992px){
+        .other-pagesPage a{
+            font-size: 10px;
+            }
+    }
+    @media(max-width: 768px){
+        .other-pagesPage a{
+            font-size: 9px;
+        }
+    }
 }
 .other-pagesPage a{
     display: block;
