--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Changa:wght@200..800&family=Concert+One&family=Truculenta:opsz,wght@12..72,100..900&display=swap');
 @import "./scss/reset";
+@import "./scss/variables";
 @import "./scss/navegador";
 @import "./scss/inicio";
 @import "./scss/navegador-contactos";
@@ -9,291 +10,3 @@
 @import "./scss/tipos-alimentacion";
 
 
-
-@media(max-width: 1200px) {
-    .other-pagesPage a{
-        font-size: 14px;
-    }
-    .titulo-inicio{
-        font-size: 56px;
-    }
-    .navegador-img{
-        width: 80px;
-        height: 80px;
-    }
-    .video-videInformativo{
-        width: 440px; 
-        height: 270px;
-    }
-    .titulo-videoInformativo{
-        font-size: 17px;
-    }
-    .description-videoInformatico{
-        font-size: 15px;
-    }
-    .titulo-miInformacion{
-        font-size: 22px;
-    }
-    .mi-Informacion{
-        font-size: 12px;
-    }
-    /*MAS INFORMACION*/
-    .titulo-mas-informacion{
-    font-size: 56px;
-    }
-    .img-mas-informacion{
-    width: 500px;
-    height: 350px;
-    }
-    .informacion-fit{
-    font-size: 18px;
-    }
-    .video-cambio{
-    width: 520px;
-    height: 280px;
-    }
-    .img-flecha{
-    width: 250px;
-    height: 180px;
-    }
-    .titulo-metodos{
-    font-size: 17px;
-    }
-    .descripcion-metodos{
-    font-size: 11px;
-    }
-    .titulo-entrenamientos{
-    font-size: 16px;
-    }
-    .descripcion-entrenamientos{
-        font-size: 14px;
-    }
-}
-@media(max-width: 1024px) {
-    .other-pagesPage a{
-        font-size: 12px;
-    }
-    .titulo-inicio{
-        font-size: 52px;
-    }
-    .navegador-img{
-        width: 70px;
-        height: 70px;
-    }
-    .video-videInformativo{
-        width: 400px; 
-        height: 240px;
-    }
-    .titulo-videoInformativo{
-        font-size: 16px;
-    }
-    .description-videoInformatico{
-        font-size: 14px;
-    }
-    .titulo-miInformacion{
-        font-size: 20.5px;
-    }
-    .mi-Informacion{
-        font-size: 11px;
-    }
-    /*MAS INFORMACION*/
-    .titulo-mas-informacion{
-    font-size: 52px;
-    }
-    .img-mas-informacion{
-    width: 450px;
-    height: 300px;
-    }
-    .informacion-fit{
-    font-size: 16px;
-    }
-    .video-cambio{
-    width: 460px;
-    height: 240px;
-    }
-    .img-flecha{
-    width: 200px;
-    height: 160px;
-    }
-    .titulo-metodos{
-    font-size: 16px;
-    }
-    .descripcion-metodos{
-    font-size: 10px;
-    }
-    .titulo-entrenamientos{
-    font-size: 15px;
-    }
-    .descripcion-entrenamientos{
-        font-size: 13px;
-    }
-}
-@media(max-width: 992px) {
-    .other-pagesPage a{
-        font-size: 10px;
-    }
-    .titulo-inicio{
-        font-size: 48px;
-    }
-    .navegador-img{
-        width: 60px;
-        height: 60px;
-    }
-    .video-videInformativo{
-        width: 370px; 
-        height: 220px;
-    }
-    .titulo-videoInformativo{
-        font-size: 15px;
-    }
-    .description-videoInformatico{
-        font-size: 13px;
-    }
-    .titulo-miInformacion{
-        font-size: 19px;
-    }
-    .mi-Informacion{
-        font-size: 10px;
-    }
-    /*RUTINAS*/
-    .titulo-rutinas{
-        font-size: 48px;
-    }
-    /*MAS INFORMACION*/
-    .titulo-mas-informacion{
-    font-size: 48px;
-    }
-    .img-mas-informacion{
-    width: 400px;
-    height: 250px;
-    }
-    .informacion-fit{
-    font-size: 14px;
-    }
-    .video-cambio{
-    width: 420px;
-    height: 200px;
-    }
-    .img-flecha{
-    width: 150px;
-    height: 120px;
-    }
-    .titulo-metodos{
-    font-size: 15px;
-    }
-    .descripcion-metodos{
-    font-size: 9.5px;
-    }
-    .titulo-entrenamientos{
-    font-size: 14px;
-    }
-    .descripcion-entrenamientos{
-        font-size: 12px;
-    }
-}
-@media(max-width: 768px){
-    .inicio{
-        flex-wrap: wrap;
-    }
-    .other-pagesPage a{
-        font-size: 9px;
-    }
-    .titulo-inicio{
-        font-size: 38px;
-    }
-    .navegador-img{
-        width: 50px;
-        height: 50px;
-    }
-    .video-videInformativo{
-        width: 320px; 
-        height: 190px;
-    }
-    .titulo-videoInformativo{
-        font-size: 14px;
-    }
-    .description-videoInformatico{
-        font-size: 12px;
-    }
-    .titulo-miInformacion{
-        font-size: 18px;
-    }
-    .mi-Informacion{
-        font-size: 9px;
-    }
-    /*MAS INFORMACION*/
-    .titulo-mas-informacion{
-    font-size: 38px;
-    }
-    .img-mas-informacion{
-    width: 400px;
-    height: 250px;
-    }
-    .informacion-fit{
-    font-size: 10px;
-    }
-    .video-cambio{
-    width: 360px;
-    }
-    .img-flecha{
-    width: 120px;
-    height: 100px;
-    }
-    .titulo-metodos{
-    font-size: 12px;
-    }
-    .descripcion-metodos{
-    font-size: 9px;
-    }
-    .titulo-entrenamientos{
-    font-size: 12px;
-    }
-    .descripcion-entrenamientos{
-        font-size: 11px;
-    }
-    /*RUTINAS*/
-    .titulo-rutinas{
-        font-size: 38px;
-    }
-    .dias{
-        font-size: 20px;
-    }
-    .descripcion-rutinas{
-        font-size: 15px;
-    }
-    /*FOOTER*/
-    .footer{
-    align-items: flex-end;
-    }
-    .logo-de-abajo {
-    width: 130px;
-    height: 130px; 
-    }
-}
-@media(max-width: 768px){
-    /*MAS INFORMACION*/
-    .titulo-mas-informacion{
-    font-size: 32px;
-    }
-    .img-mas-informacion{
-    width: 250px;
-    height: 200px;
-    }
-    .informacion-fit{
-    font-size: 8px;
-    }
-    .video-cambio{
-    width: 250px;
-    height: 160px;
-    }
-    .img-flecha{
-    width: 80px;
-    height: 60px;
-    }
-    .titulo-metodos{
-    font-size: 10px;
-    }
-    .descripcion-metodos{
-    font-size: 8px;
-    }
-}
