--- a/scss/_mas-informacion.scss
+++ b/scss/_mas-informacion.scss
@@ -35,12 +35,15 @@
     display: flex;
     margin: 10px;
     gap: 20px;
+    @media(max-width: 768px){
+        flex-wrap: wrap;
+    }
 }
 .img-mas-informacion{
     width: 600px;
     height: 400px;
     object-fit: cover;
-    @media(max-width: 1200px) {
+        @media(max-width: 1200px) {
             .img-mas-informacion{
             width: 500px;
             height: 350px;
@@ -65,9 +68,11 @@
             }
     }
     @media(max-width: 480px){
-            .img-mas-informacion{
-            width: 250px;
-            height: 200px;
+                .img-mas-informacion{
+                width: 100%;
+                height: 100%;
+                align-items: center;
+                display: flex;
             }
     }
 }
@@ -99,7 +104,7 @@
     }
     @media(max-width: 480px){
             .informacion-fit{
-            font-size: 8px;
+            font-size: 11px;
             }
     }
 }
@@ -107,6 +112,12 @@
     display: flex;
     justify-content: space-around;
     flex-direction: row-reverse;
+    @media(max-width: 480px){
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+    }
 }
 .videoCambio{
     object-fit: cover;
@@ -139,8 +150,8 @@
     }
     @media(max-width: 480px){
             .video-cambio{
-            width: 250px;
-            height: 160px;
+            width: 350px;
+            height: 200px;
             }
     }
 }
@@ -173,9 +184,10 @@
             }
     }
     @media(max-width: 480px){
-            .img-flecha{
-            width: 80px;
-            height: 60px;
+                .img-flecha{
+                width: 100%;
+                height: 150px;
+                transform: rotate(90deg);
             }
     }
 }
@@ -211,7 +223,7 @@
     }
     @media(max-width: 480px){
             .titulo-metodos{
-            font-size: 10px;
+            font-size: 13px;
             }
     }
 }
@@ -240,7 +252,7 @@
     }
     @media(max-width: 480px){
             .descripcion-metodos{
-            font-size: 8px;
+            font-size: 10px;
             }
     }
 }
