--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -9,6 +9,18 @@
     padding: 10px;
     position: sticky;
     z-index: 2;
+    .icono-menu{
+        color: white;
+        font-size: 24px;
+        display: none;
+        &:hover + .navegador-links{
+            display: block;
+            transition: 1s;
+        }
+        @media(max-width: 576px){
+            display: block;
+        }
+    }
 }
 .navegador-img {
     text-align: left;
@@ -16,59 +28,63 @@
     background-color: $color-primario;
     height: 100px; 
     @media(max-width: 1200px) {
-        .navegador-img{
-            width: 80px;
-            height: 80px;
-            }
+        width: 80px;
+        height: 80px;
     }
     @media(max-width: 1024px){
-        .navegador-img{
-            width: 70px;
-            height: 70px;
-            }
+        width: 70px;
+        height: 70px;
     }
     @media(max-width: 992px){
-        .navegador-img{
-            width: 60px;
-            height: 60px;
-            }
+        width: 60px;
+        height: 60px;
     }
     @media(max-width: 768px){
-        .navegador-img{
-            width: 50px;
-            height: 50px;
-        }
+        width: 50px;
+        height: 50px;
     }
 }
-.other-pages {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    @media(max-width: 1200px) {
-        .other-pagesPage a{
-            font-size: 14px;
-            }
-    }
-    @media(max-width: 1024px){
-        .other-pagesPage a{
-            font-size: 12px;
-            }
-    }
-    @media(max-width: 992px){
-        .other-pagesPage a{
-            font-size: 10px;
-            }
-    }
-    @media(max-width: 768px){
-        .other-pagesPage a{
-            font-size: 9px;
-        }
-    }
-}
-.other-pagesPage a{
+.links a{
     display: block;
     color: white;
     padding: 20px 5px;
     text-decoration: none;
     font-family: Changa;
+    @media(max-width: 1200px) {
+        font-size: 14px;   
+    }
+    @media(max-width: 1024px){
+        font-size: 12px;
+    }
+    @media(max-width: 992px){
+        font-size: 10px;
+    }
+    @media(max-width: 768px){
+        font-size: 9px;
+    }
+    @media(max-width: 576px){
+        font-size: 12px;
+    }
+}
+.navegador-links a{
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    @media(max-width: 576px){
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 300px;
+        color: white;
+        background-color: #bd0606;
+        height: 100vh;
+        flex-direction: column;
+        padding-top: 100px;
+        align-items: center;
+        display: none;
+        &:hover{
+            display: block;
+            transition: 1s;
+        }
+    }
 }
