--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,162 +1,83 @@
 /*INICIO*/
-.titulo-inicio{
-    color: black;
-    font-size: 60px;
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 20px;
-    @media(max-width: 1200px) {
-        font-size: 56px;
-    }
-    @media(max-width: 1024px){
-        font-size: 52px;
-    }
-    @media(max-width: 992px){
-        font-size: 48px;
-    }
-    @media(max-width: 768px){
-        font-size: 38px;
-    }
+.titulo-inicio {
+  color: black;
+  font-size: 60px;
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 20px;
 }
-.inicio{
-    display: flex;
-    justify-content: space-around;
-    @media(max-width: 768px){
-        flex-wrap: wrap;
-    }
+.inicio {
+  display: flex;
+  justify-content: space-around;
 }
-.videoInformativo{
-    margin: 20px;
-    display: flex;
+.videoInformativo {
+  margin: 20px;
+  display: flex;
 }
-.video-videoInformativo{
-    width: 500px;
-    height: 310px;
-    @media(max-width: 1200px) {
-        width: 440px; 
-        height: 270px;
-    }
-    @media(max-width: 1024px){
-        width: 400px; 
-        height: 240px;
-    }
-    @media(max-width: 992px){
-        width: 370px; 
-        height: 220px;
-    }
-    @media(max-width: 768px){
-        width: 320px; 
-        height: 190px;
-    }
+.video-videoInformativo {
+  width: 500px;
+  height: 310px;
 }
-.videoDescription{
-    display: block;
+.videoDescription {
+  display: block;
 }
-.titulo-videoInformativo{
-    font-family: Changa;
-    padding: 10px;
-    margin: 5px;
-    @media(max-width: 1200px) {
-        font-size: 17px;
-    }
-    @media(max-width: 1024px){
-        font-size: 16px;
-    }
-    @media(max-width: 992px){
-        font-size: 15px;
-    }
-    @media(max-width: 768px){
-        font-size: 20px;
-    }
+.titulo-videoInformativo {
+  font-family: Changa;
+  padding: 10px;
+  margin: 5px;
 }
-.description-videoInformatico{
-    font-family: Changa;
-    padding: 10px;
-    margin: 5px;
-    @media(max-width: 1200px) {
-        font-size: 15px;
-    }
-    @media(max-width: 1024px){
-        font-size: 14px;
-    }
-    @media(max-width: 992px){
-        font-size: 13px;
-    }
-    @media(max-width: 768px){
-        font-size: 15px;
-    }
+.description-videoInformatico {
+  font-family: Changa;
+  padding: 10px;
+  margin: 5px;
 }
-.miInformacion{
-    width: 240%;
-    margin: 20px;
-    border: 1px;
-    padding: 5px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 10px;
+.miInformacion {
+  width: 240%;
+  margin: 20px;
+  border: 1px;
+  padding: 5px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
 }
-.titulo-miInformacion{
-    font-family: Changa;
-    text-align: center;
-    font-size: 24px;
-    @media(max-width: 1200px) {
-        font-size: 22px;
-    }
-    @media(max-width: 1024px){
-        font-size: 20.5px;
-    }
-    @media(max-width: 992px){
-        font-size: 19px;
-    }
-    @media(max-width: 768px){
-        font-size: 20px;
-    }
+.titulo-miInformacion {
+  font-family: Changa;
+  text-align: center;
+  font-size: 24px;
 }
-.mi-Informacion{
-    font-size: 13.5px;
-    font-family: Changa;
-    text-align: center;
-    @media(max-width: 1200px) {
-        font-size: 12px;
-    }
-    @media(max-width: 1024px){
-        font-size: 11px;
-    }
-    @media(max-width: 992px){
-        font-size: 10px;
-    }
-    @media(max-width: 768px){
-        font-size: 14px;
-    }
+.mi-Informacion {
+  font-size: 13.5px;
+  font-family: Changa;
+  text-align: center;
 }
-.grafico-inicio-img{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.grafico-inicio-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.grafico-inicio{
-    width: 50%;
+.grafico-inicio {
+  width: 50%;
 }
-.graficoInicio{
-    display: flex;
-    flex-direction: row;
-    margin: 20px;
-    flex-wrap: wrap;
-    align-items: baseline;
-    justify-content: space-around;
+.graficoInicio {
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: space-around;
 }
-.recurrencia-ejercicio{
-    width: 400px;
-    margin: 20px;
-    border: 1px solid black;
-    padding: 5px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.recurrencia-ejercicio {
+  width: 400px;
+  margin: 20px;
+  border: 1px solid black;
+  padding: 5px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.descripcion-graficos{
-    font-size: 14px;
-    text-align: center;
-    font-family: Changa;
+.descripcion-graficos {
+  font-size: 14px;
+  text-align: center;
+  font-family: Changa;
 }
