--- a/scss/_rutinas.scss
+++ b/scss/_rutinas.scss
@@ -1,71 +1,59 @@
 /*RUTINAS*/
-.titulo-rutinas{
-    color: black;
-    margin: 20px;
-    font-size: 60px;
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    @media(max-width: 992px){
-        font-size: 48px;
-    }
-    @media(max-width: 768px){
-        font-size: 38px;
-    }
+.titulo-rutinas {
+  color: black;
+  margin: 20px;
+  font-size: 60px;
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.tipos-rutinas{
-    background-color: rgb(117, 116, 115);
-    justify-content: space-around;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    margin-top: 100px;
-    margin-bottom: 100px; 
+.tipos-rutinas {
+  background-color: rgb(117, 116, 115);
+  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
-.rutinas{
-    width: 600px;
-    border: 2px;
-    border-style: solid;
-    border-color: black;
-    margin: 20px;
-    padding: 10px;
-    background-color: $color-terciario;
-    position: relative;
+.rutinas {
+  width: 600px;
+  border: 2px;
+  border-style: solid;
+  border-color: black;
+  margin: 20px;
+  padding: 10px;
+  background-color: $color-terciario;
+  position: relative;
 }
-.dias{
-    font-family: Changa;
-    text-align: center;
-    font-size: 30px;
-    @media(max-width: 768px){
-        font-size: 20px;
-    }
+.dias {
+  font-family: Changa;
+  text-align: center;
+  font-size: 30px;
 }
-.img-rutinas{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+.img-rutinas {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
-.descripcion-rutinas{
-    font-family: Changa;
-    text-align: center;
-    @media(max-width: 768px){
-        font-size: 15px;
-    }
+.descripcion-rutinas {
+  font-family: Changa;
+  text-align: center;
 }
-.boton-rutinas{
-    width: 130px;
-    height: 45px;
-    color: white;
-    background-color: rgb(0, 0, 0);
-    border: 0px;
-    padding: 10px;
-    border-radius: 5px;
-    font-family: Changa;
-    position: absolute;
-    bottom: -30px;
+.boton-rutinas {
+  width: 130px;
+  height: 45px;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  border: 0px;
+  padding: 10px;
+  border-radius: 5px;
+  font-family: Changa;
+  position: absolute;
+  bottom: -30px;
+  transition: 1s;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.836);
+    width: 140px;
     transition: 1s;
-    &:hover{
-        background-color: rgba(0, 0, 0, 0.836);
-        width: 140px;
-        transition: 1s;
-    }
+  }
 }
