--- a/style.css
+++ b/style.css
@@ -21,11 +21,19 @@
   color: #bd0606;
   font-size: 24px;
 }
+.contenedor-navegador-img {
+  overflow: hidden;
+}
 .navegador-img {
   text-align: left;
   width: 100px;
-  background-color: #bd0606;
   height: 100px;
+  background-color: #bd0606;
+  transition: 1s;
+}
+.navegador-img:hover {
+  transform: scale(1.2);
+  transition: 1s;
 }
 .navegador-links {
   list-style: none;
@@ -39,6 +47,10 @@
   text-decoration: none;
   font-family: Changa;
 }
+.links:hover {
+  font-size: 18px;
+  transition: 1s;
+}
 /*INICIO*/
 .titulo-inicio {
   color: black;
@@ -50,6 +62,7 @@
 .inicio {
   display: flex;
   justify-content: space-around;
+  margin: 50px 0px 120px 0px;
 }
 .videoInformativo {
   margin: 20px;
@@ -95,6 +108,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 100px 0px;
 }
 .grafico-inicio {
   width: 50%;
@@ -109,7 +123,7 @@
 }
 .recurrencia-ejercicio {
   width: 400px;
-  margin: 20px;
+  margin: 120px 20px;
   border: 1px solid black;
   padding: 5px;
   border-radius: 10px;
@@ -135,6 +149,11 @@
   color: white;
   padding: 20px 5px;
   text-decoration: none;
+  transition: 1s;
+}
+.red-ig a:hover {
+  font-size: 16px;
+  transition: 1s;
 }
 .red-face a {
   font-family: Changa;
@@ -142,6 +161,11 @@
   color: white;
   padding: 5px;
   text-decoration: none;
+  transition: 1s;
+}
+.red-face a:hover {
+  font-size: 16px;
+  transition: 1s;
 }
 .red-num {
   font-family: Changa;
@@ -150,6 +174,11 @@
   padding: 20px 5px;
   text-decoration: none;
   font-family: Changa;
+  transition: 1s;
+}
+.red-num:hover {
+  font-size: 16px;
+  transition: 1s;
 }
 /*FOOTER*/
 .footer {
@@ -169,6 +198,11 @@
   position: absolute;
   width: 150px;
   height: 150px;
+  transition: 1s;
+}
+.logo-de-abajo:hover {
+  transform: scale(1.2);
+  transition: 1s;
 }
 /*RUTINAS*/
 .titulo-rutinas {
@@ -206,6 +240,11 @@
   width: 100%;
   height: 200px;
   object-fit: cover;
+  transition: 1s;
+}
+.img-rutinas:hover {
+  transform: scale(1.1);
+  transition: 1s;
 }
 .descripcion-rutinas {
   font-family: Changa;
@@ -226,7 +265,7 @@
 }
 .boton-rutinas:hover {
   background-color: rgba(0, 0, 0, 0.836);
-  width: 140px;
+  width: 160px;
   transition: 1s;
 }
 /*MAS INFORMACION*/
