--- a/scss/_rutinas.scss
+++ b/scss/_rutinas.scss
@@ -5,6 +5,12 @@
   font-size: 60px;
   text-align: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  @media (max-width: 992px) {
+    font-size: 48px;
+  }
+  @media (max-width: 768px) {
+    font-size: 38px;
+  }
 }
 .tipos-rutinas {
   background-color: rgb(117, 116, 115);
@@ -29,6 +35,9 @@
   font-family: Changa;
   text-align: center;
   font-size: 30px;
+  @media (max-width: 768px) {
+    font-size: 20px;
+  }
 }
 .img-rutinas {
   width: 100%;
@@ -38,6 +47,9 @@
 .descripcion-rutinas {
   font-family: Changa;
   text-align: center;
+  @media (max-width: 768px) {
+    font-size: 15px;
+  }
 }
 .boton-rutinas {
   width: 130px;
