--- a/scss/_tipos-alimentacion.scss
+++ b/scss/_tipos-alimentacion.scss
@@ -5,6 +5,22 @@
   font-size: 60px;
   text-align: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  @media (max-width: 1200px) {
+    font-size: 56px;
+  }
+  @media (max-width: 1024px) {
+    font-size: 52px;
+  }
+  @media (max-width: 992px) {
+    font-size: 48px;
+  }
+  @media (max-width: 768px) {
+    font-size: 38px;
+  }
+  @media (max-width: 576px) {
+  }
+  @media (max-width: 480px) {
+  }
 }
 .circuloComidas {
   display: flex;
