--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,21 +6,32 @@
   justify-content: flex-start;
   flex-direction: column-reverse;
   background-color: #bd0606;
-  @media (max-width: 768px) {
-    align-items: flex-end;
-  }
 }
 .copyright {
   font-size: 12px;
   color: black;
+  margin: 0px 10px 20px;
+  @media (max-width: 992px) {
+    font-size: 10px;
+  }
 }
 .logo-de-abajo {
   display: flex;
   position: absolute;
+  margin: 20px;
   width: 150px;
   height: 150px;
-  @media (max-width: 768px) {
+  @media (max-width: 992px) {
     width: 130px;
     height: 130px;
+  }
+  @media (max-width: 768px) {
+    width: 80px;
+    height: 80px;
+    margin: 5px;
+  }
+  &:hover {
+    transform: scale(1.1);
+    transition: 1s;
   }
 }
